syntax = "proto3";

package membership;

option go_package = "github.com/maxpoletaev/kiwi/membership/proto";

enum Status {
    HEALTHY = 0;
    UNHEALTHY = 1;
    LEFT = 2;
}

message Node {
    uint32 id = 1;
    string address = 2;
    int32 generation = 3;
    Status status = 4;
}

message ListNodesRequest {
}

message ListNodesResponse {
    repeated Node nodes = 1;
}

message PullPushStateRequest {
    repeated Node nodes = 1;
}

message PullPushStateResponse {
    repeated Node nodes = 1;
}

service Membership {
    rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {}
    rpc PullPushState(PullPushStateRequest) returns (PullPushStateResponse) {}
}